# src/server/chess-api/swagger_server/models/__init__.py
@@ -6,5 +6,4 @@ from __future__ import absolute_import
 from swagger_server.models.fen_request import FenRequest
 from swagger_server.models.move import Move
 from swagger_server.models.opening import Opening
-from swagger_server.models.opening_meta import OpeningMeta
 from swagger_server.models.opening_variant import OpeningVariant
